@@ -1,4 +1,14 @@
-# FIXME: document BS options
+#' regression using randomForest.
+#'
+#' a mlr learner for regrssion tasks using \code{\link[randomForest]{randomForest}}.
+#'
+#' if \code{predict.type = "se"} the \code{se.method} (by default \dQuote{jackknife})
+#' is estimated, using the methods described in Sexton and Laake (2009).
+#'
+#' @references [Joseph Sexton] and [Petter Laake],; [Standard errors for bagged and random forest estimators], Computational Statistics and Data Analysis Volume 53, 2009, [801-811].
+#'
+#' @name regr.randomForest
+NULL
 
 #' @export
 makeRLearner.regr.randomForest = function() {
@@ -8,8 +18,10 @@ makeRLearner.regr.randomForest = function() {
     par.set = makeParamSet(
       makeIntegerLearnerParam(id = "ntree", default = 500L, lower = 1L),
       makeIntegerLearnerParam(id = "ntree.for.se", default = 100L, lower = 1L),
-      makeDiscreteLearnerParam(id = "se.method", default = "bootstrap", values = c("bootstrap", "jackknife", "noisy.bootstrap"), requires = quote(se.method != "jackknife" && keep.inbag == TRUE)),
-      makeIntegerLearnerParam(id = "nr.of.bootstrap.samples", default = 5L, lower = 1L),
+      makeDiscreteLearnerParam(id = "se.method", default = "jackknife",
+                               values = c("bootstrap", "jackknife",  "sd"),
+                               requires = quote(se.method %in% c("jackknife") && keep.inbag == TRUE)),
+      makeIntegerLearnerParam(id = "se.boot", default = 50L, lower = 1L),
       makeIntegerLearnerParam(id = "mtry", lower = 1L),
       makeLogicalLearnerParam(id = "replace", default = TRUE),
       makeIntegerLearnerParam(id = "sampsize", lower = 1L),
@@ -22,55 +34,40 @@ makeRLearner.regr.randomForest = function() {
     ),
     par.vals = list(
       se.method = "bootstrap",
-      nr.of.bootstrap.samples = 5L
+      se.boot = 50L,
+      ntree.for.se = 100L
     ),
     properties = c("numerics", "factors", "ordered", "se"),
     name = "Random Forest",
-    short.name = "rf"
+    short.name = "rf",
+    note = "see ?regr.randomForest for information about se estimation."
+
   )
 }
 
 #' @export
 trainLearner.regr.randomForest = function(.learner, .task, .subset, .weights = NULL, ...) {
-  f = getTaskFormula(.task)
-  par.vals = .learner$par.vals
-
-  m = randomForest::randomForest(f, data = getTaskData(.task, .subset), ...)
-
-  # we have to do some preprocessing here if we need the standard error
-  if (.learner$predict.type == "se") {
-    if (par.vals$se.method %in% c("bootstrap", "noisy.bootstrap")) {
-      train = getTaskData(.task, .subset)
-
-      # set some params for bootstraping
-      numberOfBootstraps = par.vals[["nr.of.bootstrap.samples"]]
-      bootstrapSize = nrow(train)
-
-      # generate bootstrap samples
-      samplesIdx = replicate(numberOfBootstraps, sample(seq_len(bootstrapSize), replace = TRUE))
-
-      # determine whether we work with reduced ensemble size (noisy bootstrap) or not
-      ntree = if (par.vals$se.method == "bootstrap") par.vals$ntree else par.vals$ntree.for.se
-
-      # fit models on the bootstrap samples
-      models = apply(samplesIdx, 2, function(bootstrapIdx) {
-        randomForest::randomForest(f, data = train[bootstrapIdx,, drop = FALSE],...)
-      })
-
-      # save models in attrribute
-      attr(m, "mlr.se.bootstrap.models") = models
-    }
+  if (.learner$predict.type == "se" &
+        .learner$par.vals$se.method == "bootstrap") {
+    base.lrn = setPredictType(.learner, "response")
+    base.lrn = setHyperPars(base.lrn, ntree = .learner$par.vals$ntree.for.se)
+    bag.rf = makeBaggingWrapper(base.lrn, .learner$par.vals$se.boot, bw.replace = TRUE)
+    m = train(bag.rf, .task, .subset, .weights)
+  } else {
+    data = getTaskData(.task, .subset, target.extra = TRUE)
+    m = randomForest::randomForest(x = data[["data"]], y = data[["target"]], ...)
   }
   return(m)
 }
+
 
 #' @export
 predictLearner.regr.randomForest = function(.learner, .model, .newdata, ...) {
   if (.learner$predict.type == "se") {
     se.fun = switch(.learner$par.vals$se.method,
       bootstrap = bootstrapStandardError,
-      noisy.bootstrap = bootstrapStandardError,
-      jackknife = jackknifeStandardError
+      jackknife = jackknifeStandardError,
+      sd = sdStandardError
     )
     se.fun(.learner, .model, .newdata, ...)
   } else {
@@ -78,89 +75,50 @@ predictLearner.regr.randomForest = function(.learner, .model, .newdata, ...) {
   }
 }
 
-# Computes the (potentially bias-corrected respcetively noisy)
-# bootstrap estimator of the standard error
+# Computes brute force or noisy bootstrap
+# Set ntree = ntree.for.se for the brute force bootstrap
+# Set ntree.for.se << ntree for the noisy bootstrap (mc bias corrected)
 bootstrapStandardError = function(.learner, .model, .newdata, ...) {
-    # copy learner and change response type
-    par.vals = .learner$par.vals
-
-    models = attr(.model$learner.model, "mlr.se.bootstrap.models")
-    B = length(models)
-    R = par.vals$ntree
-    M = if(is.null(par.vals$ntree.for.se)) par.vals$ntree else par.vals$ntree.for.se
-
-    # make predictions for newdata based on each "bootstrap model"
-    preds = lapply(models, function(model) {
-      # save predictions of every single ensemble member, i.e., decision tree
-      predict(model, .newdata, predict.all = TRUE)
-    })
-
-    # n x B matrix of reponses of B forests
-    aggr.responses = extractSubList(preds, "aggregate", simplify = "cols")
-    mean.responses = rowMeans(aggr.responses)
-    # list of n x M matrices of ensemble responses
-    ind.responses = extractSubList(preds, "individual", simplify = FALSE, use.names = FALSE)
-
-    # R substracts columnswise matrix - vector, 2nd is actually apply(aggr.responses, 1, var)
-    res = cbind(mean.responses, rowSums((aggr.responses - mean.responses)^2) / (B-1))
-
-    if (par.vals$se.method == "noisy.bootstrap") {
-      # Bias contributed significantly to the error of the biased bootstrap estimator
-      # Thus, compute a corrected version
-      # FIXME: check if this works properly
-      const = ((1/R) - (1/M))/(B*R*(R-1))
-      for (i in seq_row(.newdata)) {
-        bias = 0
-        for (b in seq_len(B)) {
-          for (r in seq_len(R)) {
-            bias = bias + (ind.responses[[b]][i, r] - aggr.responses[i,b])^2
-          }
-        }
-
-        bias = bias * const
-        res[i, 2L] = res[i, 2L] - bias
-      }
-    }
-
-    # var --> sd
-    res[, 2L] = sqrt(res[, 2L])
-    return(res)
+  pred.all.boot = lapply(getLearnerModel(.model$learner.model), function(x)
+    predict(x$learner.model, newdata = .newdata, predict.all = TRUE)$individual)
+  B = .learner$par.vals$se.boot
+  R = .learner$par.vals$ntree.for.se
+  M = .learner$par.vals$ntree
+  bias = ((1 / R) - (1 / M)) / (B * R * (R - 1)) *
+    rowSums(matrix(sapply(pred.all.boot, function(p) rowSums((p - mean(p))^2)),
+                   nrow = nrow(.newdata), ncol = R, byrow = TRUE))
+  pred = getPredictionResponse(predict(.model$learner.model, newdata = .newdata))
+  pred.boot = lapply(getLearnerModel(.model$learner.model), predict, newdata = .newdata, ...)
+  pred.boot = extractSubList(pred.boot, c("data", "response"))
+  if (is.vector(pred.boot)) {
+    pred.boot = matrix(pred.boot, nrow = nrow(.newdata), ncol = R, byrow = TRUE)
+  }
+  var.boot = apply(pred.boot, 1, var) - bias
+  var.boot[var.boot <= 0] = 0
+  cbind(pred, sqrt(var.boot))
 }
 
-# Computes the (potentially bias-corrected respcetively noisy)
-# jackknife estimator of the standard error
+# Computes the mc bias-corrected jackknife after bootstrap
 jackknifeStandardError = function(.learner, .model, .newdata, ...) {
-    # extract relevant data from
-    model = .model$learner.model
+  model = .model$learner.model
+  n = nrow(model$inbag)
+  ntree = model$ntree
+  pred = predict(model, newdata = .newdata, predict.all = TRUE)
+  oob = t(sapply(seq_len(n), function(i) model$inbag[i, ] == 0))
+  jack_n = apply(oob, 1, function(x) rowMeans(pred$individual[, x, drop = FALSE]))
+  if (is.vector(jack_n)) {
+    jack_n = t(as.matrix(jack_n))
+  }
+  jack = (n - 1) / n * rowSums((jack_n - pred$aggregate)^2)
+  bias = (exp(1) - 1) * n / ntree^2 * rowSums((pred$individual - pred$aggregate)^2)
+  jab = jack - bias
+  jab[jab < 0] = 0
+  return(cbind(pred$aggregate, sqrt(jab)))
+}
 
-    if (is.na(model$inbag))
-      stop("regr.randomForest must be defined with keep.inbag = TRUE to estimate the jackknife standard error!")
-
-    # inbag needed to determine which observation was included in the training
-    # of each ensemble member
-    inbag = model$inbag
-    n = nrow(inbag)
-
-    # keep predictions of all ensemble members
-    rf.preds = predict(model, .newdata, predict.all = TRUE)
-
-    # determine number of participating ensembles
-    # FIXME: formula looks strange. proof read ALL code in this file!
-    M = lapply(seq_len(n), function(i) sum(abs(inbag[i, ] - 1)))
-    # determine ensemlbe members, where observation i is not included
-    idx = lapply(seq_len(n), function(i) which(inbag[i, ] == 0L))
-
-    # estimate
-    res = matrix(NA_real_, ncol = n, nrow = nrow(.newdata))
-    for (j in seq_row(.newdata)) {
-      for (i in seq_len(n)) {
-        res[j, i] = sum(rf.preds$individual[j, idx[[i]]]) / M[[i]]
-      }
-    }
-
-    mean.responses = rf.preds$aggregate
-    se.preds = apply(res, 1L, function(row) {
-      sum((row - mean(row))^2)  / n
-    })
-    return(cbind(mean.responses, se.preds))
+# computes the standard deviation across trees
+sdStandardError = function(.learner, .model, .newdata, ...) {
+  pred = predict(.model$learner.model, newdata = .newdata, predict.all = TRUE, ...)
+  se = apply(pred$individual, 1, sd)
+  return(cbind(pred$aggregate, se))
 }
