@@ -27,7 +27,6 @@ test_that("regr_randomForest", {
   tt = randomForest::randomForest
 
   testCVParsets("regr.randomForest", regr.df, regr.target, tune.train = tt, parset.list = parset.list)
-
 })
 
 
@@ -47,12 +46,18 @@ test_that("fix factors work", {
 })
 
 test_that("different se.methods work", {
-  se.methods = c("bootstrap", "jackknife", "noisy.bootstrap")
+  se.methods = c("bootstrap", "jackknife")
   for (se.method in se.methods) {
-    keep.inbag = se.method == "jackknife"
-    learner = makeLearner("regr.randomForest", predict.type = "se", se.method = se.method, ntree = 10, keep.inbag = keep.inbag)
+    keep.inbag = se.method %in% c("jackknife")
+    learner = makeLearner("regr.randomForest", predict.type = "se", se.method = se.method, ntree = 10L, keep.inbag = keep.inbag)
     model = train(learner, task = regr.task, subset = regr.train.inds)
-    pred = predict(model, task = regr.task, subset = regr.test.inds)
-    expect_true(is.numeric(pred$data$se))
+
+    pred.all = predict(model, task = regr.task, subset = 1)
+    expect_true(is.numeric(pred.all$data$se))
+    expect_true(all(pred.all$data$se >= 0))
+
+    pred.one = predict(model, task = regr.task, subset = 1)
+    expect_true(is.numeric(pred.one$data$se))
+    expect_true(all(pred.one$data$se >= 0))
   }
 })
